# macrodata-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/reference/: catalog.md  mcp-tools.md  result-envelope.md
docs/superpowers/plans/: 2026-05-21-macrodata-cli-mvp-plan.md
docs/superpowers/specs/: 2026-05-21-macrodata-cli-design.md
src/macrodata/: __main__.py
src/macrodata/app/: runtime.py  services.py
src/macrodata/catalog/: entries.py  registry.py
src/macrodata/core/: envelope.py  errors.py  models.py  series_key.py
src/macrodata/gateway/: http_client.py  macrodata_gateway.py
src/macrodata/providers/: cftc.py  contracts.py  fred.py  nyfed.py  stooq.py  treasury_fiscal.py  yahoo.py
src/macrodata/surfaces/: cli.py  mcp_server.py
tests/cli/: test_bundle_commands.py  test_catalog_commands.py  test_cli_foundation.py  test_fetch_commands.py  test_source_commands.py
tests/mcp/: test_mcp_server.py
tests/provider/: test_cftc_provider.py  test_fred_provider.py  test_nyfed_provider.py  test_stooq_provider.py  test_treasury_fiscal_provider.py  test_yahoo_provider.py
tests/unit/: test_bundles.py  test_catalog.py  test_core_models.py  test_http_client.py  test_repository_source_cleanliness.py  test_runtime.py
