[project]
name = "macrodata-cli"
version = "0.1.0"
description = "Agent-friendly macro data CLI, SDK, and MCP server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.12.4",
    "platformdirs>=4.3.0",
    "pydantic>=2.8.0",
    "tenacity>=9.0.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
macrodata = "macrodata.surfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macrodata"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "RUF", "PL"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "live: opt-in tests that call external provider APIs",
]
